--- a/public/index.html
+++ b/public/index.html
@@ -18,13 +18,13 @@
                 <!-- <i class="icon">&#x2022;</i> -->
             </div>
         </div>
-        <div class="chat-box" id="chat-box">
-            <!-- Chat messages will be appended here -->
-        </div>
+        <div class="chat-box" id="chat-box"></div>
+        <div class="dot-flashing"></div>
         <div class="chat-input">
             <input type="text" id="user-input" placeholder="Type your message...">
             <button id="send-button">Send</button>
         </div>
+        <div id="suggestions-container" class="suggestions-container"></div>
     </div>
     <script src="script.js"></script>
 </body>
