--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
         </div>
         <div id="suggestions-container" class="suggestions-container"></div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
